--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,10 @@
 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
 
 - FONT WEIGHT 
-Default: 400
+Default: 400 500 600 700
 
 - LINE HEIGHT 
-Default: 1 
+Default: 1/1.05/1.6
 
 SPACING SYSTEM (px)
 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
@@ -16,15 +16,16 @@ SPACING SYSTEM (px)
 -- 02 COLOR SYSTEM
 primary: #e67e22
 
--Tints:
--Shades:
+-Tints: #fdf2e9
+-Shades: #cf711f 
 -Accents:
--Grays:
+-Grays: #333
 #555
 
 -- 03 SHADOWS
 
 -- 04 BORDER RADIUS
+Default: 9px
 
 -- 05 WHITE SPACE
 
@@ -49,22 +50,225 @@ html {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: Rubik, sans-serif;
   line-height: 1;
   font-weight: 400;
   color: #555;
 }
 
-.container {
-  max-width: 1200rem;
-  margin: 0 auto;
+/******************************/
+/* GENERAL REUSABLE COMPONENTS */
+/******************************/
+
+.heading-primary {
+  font-size: 5.2rem;
+  line-height: 1.1;
+  color: #333;
+  letter-spacing: -0.5px;
+  margin-bottom: 3.2rem;
 }
 
+.btn:link,
+.btn:visited {
+  display: inline-block;
+  color: #fff;
+  font-size: 2rem;
+  padding: 1.6rem 3.2rem;
+  text-decoration: none;
+  border-radius: 9px;
+  font-weight: 600;
+  /* Do simple animation,change from one color to another graduallly */
+  /* 1. Change the value of a certain property or multiple properties 
+  from one value to another one */
+  /* 2. Put the transition on original state */
+  transition: background-color 1s;
+  /* transition: all 1s; */
+}
+
+.btn--full:link,
+.btn--full:visited {
+  background-color: #e67e22;
+}
+
+.btn--full:hover,
+.btn--full:active {
+  background-color: #cf711f;
+}
+
+.btn--outline:link,
+.btn--outline:visited {
+  background-color: #fff;
+  color: #555;
+}
+
+.btn--outline:hover,
+.btn--outline:active {
+  background-color: #fdf2e9;
+  color: #555;
+  /* trick to add border inside */
+  box-shadow: inset 0 0 0 3px #fff;
+}
+
+/* create a helper class so it wont create conflict when we reuse the element itself*/
+/* e.g. we dont want the margin-right property when reuse an element */
+.margin-right-sm {
+  margin-right: 1.6rem !important;
+}
+
+/******************************/
+/* HEADER */
+/******************************/
+.logo {
+  height: 2.4rem;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fdf2e9;
+  /* Because we want the header to be sticky later */
+  height: 9.6rem;
+  /* still use padding but only horizontal*/
+  padding: 0 4.8rem;
+}
+
+.main-nav-list {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  gap: 1.6rem;
+  align-items: center;
+}
+
+.main-nav-link:link,
+.main-nav-link:visited {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 1.8rem;
+  color: #333;
+  transition: all 0.3s;
+}
+
+.main-nav-link:hover {
+  color: #cf711f;
+}
+
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+  padding: 1.2rem 2.4rem;
+  border-radius: 9px;
+  background-color: #e67e22;
+  color: #fff;
+}
+
+.main-nav-link.nav-cta:hover {
+  background-color: #cf711f;
+}
+
+/******************************/
+/* HERO SECTION */
+/******************************/
+
 .section-hero {
+  background-color: #fdf2e9;
+  padding: 4.8rem 0;
+}
+
+.hero {
+  margin: 0 auto;
+  padding: 0 3.2rem;
+  /* the hero section has a larger width than other sections 
+     thats the reason why we dont use reusable center container*/
+  max-width: 130rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: 9.6rem;
 }
 
 .hero-img {
-  width: 50rem;
+  width: 100%;
+}
+
+.hero-description {
+  font-size: 2rem;
+  line-height: 1.6;
+  margin-bottom: 4.8rem;
+}
+
+.delivered-meals {
+  margin-top: 8rem;
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+}
+
+.delivered-imgs {
+  display: flex;
+}
+
+.deliverd-text {
+  font-weight: 600;
+  font-size: 1.8rem;
+}
+
+.delivered-imgs img {
+  width: 4.8rem;
+  height: 4.8rem;
+  border-radius: 50%;
+  margin-right: -1.6rem;
+  border: 3px solid #fdf2e9;
+}
+
+.delivered-imgs img:last-child {
+  margin-right: 0;
+}
+
+.deliverd-text span {
+  font-weight: 700;
+  color: #cf711f;
+}
+
+/******************************/
+/* HOW IT WORKS SECTION */
+/******************************/
+.section-how {
+  padding: 9.6px 0;
+  background-color: orangered;
+}
+
+/* create a reusable container(centered) */
+.container {
+  /* 1140px */
+  max-width: 120rem;
+  margin: 0 auto;
+  padding: 0 3.2rem;
+}
+
+/* create a reusable grid */
+.grid {
+  display: grid;
+  gap: 9.6rem;
+  /* grid-template-columns: repeat(2, 1fr); */
+}
+
+.grid--2-cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.grid--3-cols {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.section-how div {
+  padding: 100px;
+
+  font-size: 50px;
+}
+
+.section-how div div {
+  padding: 100px;
+  font-size: 50px;
+  background-color: #333;
 }
