--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 Default: 400 500 600 700
 
 - LINE HEIGHT 
-Default: 1/1.05/1.6
+Default: 1/1.05/1.6/0.5/0.75
 
 SPACING SYSTEM (px)
 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
@@ -16,7 +16,7 @@ SPACING SYSTEM (px)
 -- 02 COLOR SYSTEM
 primary: #e67e22
 
--Tints: #fdf2e9
+-Tints: #fdf2e9  #fae5d3
 -Shades: #cf711f 
 -Accents:
 -Grays: #333
@@ -55,66 +55,6 @@ body {
   font-weight: 400;
   color: #555;
 }
-
-/******************************/
-/* GENERAL REUSABLE COMPONENTS */
-/******************************/
-
-.heading-primary {
-  font-size: 5.2rem;
-  line-height: 1.1;
-  color: #333;
-  letter-spacing: -0.5px;
-  margin-bottom: 3.2rem;
-}
-
-.btn:link,
-.btn:visited {
-  display: inline-block;
-  color: #fff;
-  font-size: 2rem;
-  padding: 1.6rem 3.2rem;
-  text-decoration: none;
-  border-radius: 9px;
-  font-weight: 600;
-  /* Do simple animation,change from one color to another graduallly */
-  /* 1. Change the value of a certain property or multiple properties 
-  from one value to another one */
-  /* 2. Put the transition on original state */
-  transition: background-color 1s;
-  /* transition: all 1s; */
-}
-
-.btn--full:link,
-.btn--full:visited {
-  background-color: #e67e22;
-}
-
-.btn--full:hover,
-.btn--full:active {
-  background-color: #cf711f;
-}
-
-.btn--outline:link,
-.btn--outline:visited {
-  background-color: #fff;
-  color: #555;
-}
-
-.btn--outline:hover,
-.btn--outline:active {
-  background-color: #fdf2e9;
-  color: #555;
-  /* trick to add border inside */
-  box-shadow: inset 0 0 0 3px #fff;
-}
-
-/* create a helper class so it wont create conflict when we reuse the element itself*/
-/* e.g. we dont want the margin-right property when reuse an element */
-.margin-right-sm {
-  margin-right: 1.6rem !important;
-}
-
 /******************************/
 /* HEADER */
 /******************************/
@@ -165,7 +105,6 @@ body {
 .main-nav-link.nav-cta:hover {
   background-color: #cf711f;
 }
-
 /******************************/
 /* HERO SECTION */
 /******************************/
@@ -229,46 +168,95 @@ body {
   font-weight: 700;
   color: #cf711f;
 }
+/******************************/
+/* FITURED IN SECTION */
+/******************************/
+.section-featured {
+  padding: 4.8rem 0 3.2rem 0;
+}
+
+.heading-featured-in {
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  letter-spacing: 0.75px;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 2.4rem;
+  color: #888;
+}
+
+.logos {
+  display: flex;
+  /* justify-content: space-between; */
+  justify-content: space-around;
+}
+
+.logos img {
+  height: 3.2rem;
+  /* A trick making all pictures/logos gray 
+  set filter:brightness(0) will make all logos completely black*/
+  filter: brightness(0);
+  opacity: 0.5;
+  /* filter: grayscale(100%); */
+}
 
 /******************************/
 /* HOW IT WORKS SECTION */
 /******************************/
 .section-how {
-  padding: 9.6px 0;
-  background-color: orangered;
+  padding: 9.6rem 0;
+  /* background-color: orangered; */
 }
 
-/* create a reusable container(centered) */
-.container {
-  /* 1140px */
-  max-width: 120rem;
-  margin: 0 auto;
-  padding: 0 3.2rem;
+.step-number {
+  font-size: 9.8rem;
+  color: #ccc;
+  margin-bottom: 1.2rem;
 }
 
-/* create a reusable grid */
-.grid {
-  display: grid;
-  gap: 9.6rem;
-  /* grid-template-columns: repeat(2, 1fr); */
+.step-img {
+  width: 35%;
+  /* position: absolute; */
 }
 
-.grid--2-cols {
-  grid-template-columns: repeat(2, 1fr);
+.step-img-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 
-.grid--3-cols {
-  grid-template-columns: repeat(3, 1fr);
+.step-img-box::before,
+.step-img-box::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
 }
 
-.section-how div {
-  padding: 100px;
+/* use psudo element to insert an element */
+.step-img-box::before {
+  width: 60%;
+  /* height: 60%; */
 
-  font-size: 50px;
+  /* 60% of parent' width */
+  padding-bottom: 60%;
+
+  background-color: #fdf2e9;
+  z-index: -2;
 }
 
-.section-how div div {
-  padding: 100px;
-  font-size: 50px;
-  background-color: #333;
+.step-img-box::after {
+  width: 50%;
+  padding-bottom: 50%;
+  background-color: #fae5d3;
+  z-index: -1;
+}
+
+.step-description {
+  font-size: 1.6rem;
+  line-height: 1.8;
 }
