--- a/css/style.css
+++ b/css/style.css
@@ -14,18 +14,19 @@ SPACING SYSTEM (px)
 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
 
 -- 02 COLOR SYSTEM
-primary: #e67e22
+primary: #e67e22 #51cf66
 
--Tints: #fdf2e9  #fae5d3
+-Tints: #fdf2e9  #fae5d3 #eb984e
 -Shades: #cf711f 
 -Accents:
 -Grays: #333
 #555
 
 -- 03 SHADOWS
+0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
 
 -- 04 BORDER RADIUS
-Default: 9px
+Default: 9px 11px
 
 -- 05 WHITE SPACE
 
@@ -259,4 +260,355 @@ body {
 .step-description {
   font-size: 1.6rem;
   line-height: 1.8;
+}
+
+/******************************/
+/* MEALS SECTION */
+/******************************/
+.section-meals {
+  padding: 9.6rem 0;
+}
+
+.meal {
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+  border-radius: 11px;
+  /* this property will make any element that overflow it disappear */
+  overflow: hidden;
+  transition: all 0.3s;
+}
+
+.meal:hover {
+  /* transform: translate(0, -0.5rem); */
+  transform: translateY(-0.5rem);
+  box-shadow: 0 2.4rem 6.4rem rgba(0, 0, 0, 0.06);
+}
+
+.meal-title {
+  font-size: 2.4rem;
+  color: #333;
+  font-weight: 600;
+  margin-bottom: 3.2rem;
+}
+
+.meal-img {
+  width: 100%;
+}
+
+.meal-content {
+  padding: 3.2rem 4.8rem 4.8rem 4.8rem;
+}
+
+.meal-attributes {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.meal-attribute {
+  font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+}
+
+.meal-icon {
+  height: 2.4rem;
+  width: 2.4rem;
+  color: #cf711f;
+}
+
+.meal-tag {
+  margin-bottom: 12px;
+}
+
+.tag {
+  display: inline-block;
+  padding: 0.4rem 0.8rem;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  color: #333;
+  border-radius: 100px;
+}
+
+.tag--vegan {
+  background-color: #94d82d;
+}
+
+.tag--paleo {
+  background-color: #ffd43b;
+}
+
+/* set the font size in the parent element
+   so the link class can be reusable*/
+.all-recipes {
+  font-size: 1.8rem;
+  text-align: center;
+}
+
+.link:link,
+.link:visited {
+  display: inline-block;
+  text-decoration: none;
+  color: #cf711f;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  transition: all 0.3s;
+}
+
+.link:hover {
+  color: #e67e22;
+  /* border-bottom: none; */
+  border-bottom: 1px solid transparent;
+}
+
+/******************************/
+/* Testimonials */
+/******************************/
+.section-testimonials {
+  background-color: #fdf2e9;
+  display: grid;
+  grid-template-columns: 55fr 45fr;
+  align-items: center;
+}
+
+.testimonial-container {
+  padding: 9.6rem;
+}
+
+.testimonials {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 4.8rem;
+  row-gap: 4.8rem;
+}
+
+.testimonial-img {
+  width: 6.4rem;
+  border-radius: 50%;
+  margin-bottom: 1.2rem;
+}
+
+.testimonial-text {
+  font-size: 1.8rem;
+  line-height: 1.8;
+  margin-bottom: 1.6rem;
+}
+
+.testimonial-name {
+  font-size: 1.6rem;
+  color: #777;
+}
+
+.gallary {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 1.6rem;
+  gap: 1.6rem;
+}
+
+.gallary-item {
+  /* if you dont want the child element overflowing
+   the parent elemet,set parent elemet's overflow to hidden*/
+  overflow: hidden;
+}
+
+.gallary-item img {
+  display: block;
+  width: 100%;
+  transition: all 0.4s;
+}
+
+.gallary-item img:hover {
+  transform: scale(1.1);
+}
+
+/******************************/
+/* PRICING SECTION */
+/******************************/
+.section-pricing {
+  padding: 9.6rem 0;
+}
+
+.pricing-plan {
+  /* background-color: #fae5d3; */
+  border-radius: 11px;
+  width: 75%;
+}
+
+.plan-header {
+  text-align: center;
+  margin-bottom: 4.8rem;
+}
+
+.plan-name {
+  color: #cf711f;
+  font-weight: 600;
+  font-size: 2rem;
+  text-transform: uppercase;
+  letter-spacing: 0.75;
+  margin-bottom: 3.2rem;
+}
+.plan-price {
+  font-size: 6.2rem;
+  font-weight: 600;
+  color: #333;
+  margin-bottom: 1.6rem;
+}
+
+.plan-price span {
+  font-size: 3rem;
+  font-weight: 500;
+  margin-right: 8px;
+}
+.plan-text {
+  font-size: 1.6rem;
+  line-height: 1.6;
+  color: #6f6f6f;
+}
+
+.plan-sign-up {
+  /* since the list is reusable.we dont add margin to reusable element */
+  margin-top: 4.8rem;
+  text-align: center;
+}
+
+/*  the 2px border need to be deducted for padding */
+.pricing-plan--starter {
+  justify-self: end;
+  border: 2px solid #fdf2e9;
+  padding: 4.6rem;
+}
+
+.pricing-plan--complete {
+  justify-self: start;
+  background-color: #fdf2e9;
+  padding: 4.8rem;
+  position: relative;
+  /* overflow:hidden always set in parent element */
+  overflow: hidden;
+}
+
+.pricing-plan--complete::after {
+  content: "best value";
+  top: 6%;
+  right: -18%;
+  padding: 0.8rem 8rem;
+  transform: rotate(45deg);
+  position: absolute;
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  font-weight: 700;
+  background-color: #ffd43b;
+}
+
+.plan-details {
+  text-align: center;
+  font-size: 1.6rem;
+  line-height: 1.6;
+}
+
+/* directly style the icon with no new element created */
+.feature-icon {
+  color: #e67e22;
+  height: 3.2rem;
+  width: 3.2rem;
+  margin-bottom: 3.2rem;
+  background-color: #fdf2e9;
+  border-radius: 50%;
+  padding: 1.6rem;
+}
+.feature-title {
+  font-size: 2.4rem;
+  color: #333;
+  font-weight: 700;
+}
+.feature-text {
+  font-size: 1.8rem;
+  line-height: 1.8;
+}
+
+/******************************/
+/* CTA SECTION */
+/******************************/
+.section-cta {
+  padding: 9.6rem 0;
+}
+
+.cta {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  background-color: #e67e22;
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
+  border-radius: 11px;
+
+  /* gradiant  */
+  /* background-image: linear-gradient(to right, #e67e22, red); */
+  background-image: linear-gradient(to right bottom, #e67e22, #eb984e);
+
+  /* temp */
+  height: 50rem;
+  overflow: hidden;
+}
+
+.cta-text-box {
+  color: #2e1907;
+  padding: 4.8rem 6.4rem 6.4rem 6.4rem;
+}
+
+.cta .heading-secondary {
+  /* color: #2e1907; */
+  color: inherit;
+  margin-bottom: 3.2rem;
+}
+
+.cta-text {
+  font-size: 1.8rem;
+  line-height: 1.8;
+  margin-bottom: 4.8rem;
+}
+
+/* note the image path */
+.cta-img-box {
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(230, 125, 34, 0.35),
+      rgba(230, 125, 34, 0.35)
+    ),
+    url("../img/eating.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+.cta-form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 3.2rem;
+  row-gap: 2.4rem;
+}
+
+.cta-form label {
+  display: block;
+  font-size: 1.6rem;
+  margin-bottom: 1.2rem;
+  font-weight: 500;
+}
+
+.cta-form input,
+.cta-form select {
+  width: 100%;
+  padding: 1.2rem;
+  /* input element for some reason, 
+     not inherit font-family 
+     then you can make it inherit*/
+  color: inherit;
+  font-family: inherit;
+  background-color: #fdf2e9;
+  border-radius: 9px;
+  border: none;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.cta-form input::placeholder {
+  color: #aaa;
 }
