--- a/css/general.css
+++ b/css/general.css
@@ -47,6 +47,35 @@
   box-shadow: inset 0 0 0 3px #fff;
 }
 
+.btn--form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  /* to vertically align an item 
+  (default is stretch) to end */
+  align-self: end;
+  padding: 1.2rem;
+  transition: all 0.3s;
+}
+
+.btn--form:hover {
+  background-color: #fff;
+  color: #45260a;
+}
+
+/* style the focus */
+*:focus {
+  outline: none;
+  /* outline: 4px dotted #e67e22;
+  outline-offset: 8px; */
+  box-shadow: 0 0 0 0.8rem rgba(230, 126, 34, 0.25);
+}
+
+/* give form input another color outline */
+.cta *:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.507);
+}
+
 /* create a reusable container(centered) */
 .container {
   /* 1140px */
@@ -88,6 +117,10 @@
   grid-template-columns: repeat(4, 1fr);
 }
 
+.grid--5-cols {
+  grid-template-columns: repeat(5, 1fr);
+}
+
 .grid-centered-vertically {
   align-items: center;
 }
@@ -119,6 +152,10 @@
 
 .margin-bottom-md {
   margin-bottom: 4.8rem !important;
+}
+
+.margin-bottom-auto {
+  margin-bottom: auto;
 }
 
 .center-text {
