--- a/css/queries.css
+++ b/css/queries.css
@@ -225,6 +225,86 @@
   }
 }
 
+/******************************/
+/* BELOW 544PX(PHONES)*/
+/******************************/
+/* 550/16 */
+@media (max-width: 34em) {
+  .grid {
+    row-gap: 4.8rem;
+  }
+
+  .grid--2-cols,
+  .grid--3-cols,
+  .grid--4-cols {
+    grid-template-columns: 1fr;
+  }
+
+  .hero {
+    padding: 0 3.2rem;
+  }
+
+  .section-hero {
+    padding: 2.4rem 0 6.4rem 0;
+  }
+
+  .btn,
+  .btn:link,
+  .btn:visited {
+    padding: 2.4rem 1.6rem;
+  }
+
+  .hero-img {
+    width: 80%;
+  }
+
+  .logos img {
+    height: 1.2rem;
+  }
+
+  /* Please note :the nth-child(number), 
+  the number has nothing to do with the class .step-img-box.
+   Instead, it's the order of the parent container*/
+  .step-img-box:nth-child(2) {
+    grid-row: 1;
+  }
+
+  .step-img-box:last-child {
+    grid-row: 5;
+  }
+
+  /* Move the image close to its text using transform
+   since we cannot change the gap selectively */
+  .step-img-box {
+    transform: translateY(2.4rem);
+  }
+  .testimonials {
+    grid-template-columns: 1fr;
+  }
+
+  .gallary {
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1.2rem;
+  }
+
+  .cta {
+    grid-template-columns: 1fr;
+  }
+
+  .cta-img-box {
+    grid-row: 1;
+    height: 36rem;
+  }
+
+  .cta-text-box {
+    padding: 3.2rem;
+  }
+
+  .diets {
+    grid-row: 3;
+  }
+}
+
 /* - FONT SIZE (px)
 
 
