Implementing Javascript functions
1. Implementing sticky navigation using international API to observe the viewport
2. reveal sections on scroll, again use international API to observe different section on viewport
3. make the mobile navigation icon interactive

--- a/css/general.css
+++ b/css/general.css
@@ -233,3 +233,13 @@ body {
 strong {
   font-weight: 500;
 }
+
+.hidden-section {
+  transition: transform 1s, opacity 1s;
+  transform: translateY(9.6rem);
+}
+
+.hidden {
+  visibility: hidden;
+  opacity: 0;
+}
