--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,17 @@ Default: 9px 11px
   /* still use padding but only horizontal*/
   padding: 0 4.8rem;
   position: relative;
+  transition: all 0.5s ease-in-out;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 100;
+  height: 8rem;
+  opacity: 0.9;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.1);
 }
 
 .main-nav-list {
@@ -217,7 +228,7 @@ Default: 9px 11px
 /* HOW IT WORKS SECTION */
 /******************************/
 .section-how {
-  padding: 9.6rem 0;
+  padding: 0 0 9.6rem 0;
   /* background-color: orangered; */
 }
 
