--- a/css/style.css
+++ b/css/style.css
@@ -228,7 +228,7 @@ Default: 9px 11px
 /* HOW IT WORKS SECTION */
 /******************************/
 .section-how {
-  padding: 0 0 9.6rem 0;
+  padding: 9.6rem 0 9.6rem 0;
   /* background-color: orangered; */
 }
 
