--- a/css/style.css
+++ b/css/style.css
@@ -62,8 +62,8 @@ Default: 9px 11px
   width: 100%;
   z-index: 100;
   height: 8rem;
-  padding-left: 0;
-  padding-right: 0;
+  padding-top: 0;
+  padding-bottom: 0;
   opacity: 1;
   box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.1);
 }
